--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/platform-browser": "~21.0.0",
     "@angular/router": "~21.0.0",
     "@nx/cypress": "^22.3.3",
+    "commander": "^14.0.3",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
@@ -46,8 +47,8 @@
     "did-jwt-vc": "^4.0.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
-    "express": "^5.2.1",
     "jsdom": "^27.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "22.3.3",
     "postcss": "^8.4.5",
     "prettier": "~3.6.2",
