--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,11 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "@c2pa-mcnl/tools/did-generator": ["tools/did-generator/src/index.ts"]
+      "@c2pa-mcnl/tools/did-generator": ["tools/did-generator/src/index.ts"],
+      "@c2pa-mcnl/shared/ui/file-upload": [
+        "libs/shared/ui/file-upload/src/index.ts"
+      ],
+      "@c2pa-mcnl/shared/utils": ["libs/shared/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
