--- a/libs/shared/utils/project.json
+++ b/libs/shared/utils/project.json
@@ -5,5 +5,9 @@
   "projectType": "library",
   "tags": ["scope:shared", "type:util"],
   "// targets": "to see all targets run: nx show project shared-utils --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    }
+  }
 }
