--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/router": "~21.0.0",
     "@nx/cypress": "^22.3.3",
     "@nx/jest": "^22.4.4",
+    "@peculiar/x509": "^1.14.3",
     "commander": "^14.0.3",
     "rxjs": "~7.8.0"
   },
