--- a/tools/did-generator/project.json
+++ b/tools/did-generator/project.json
@@ -12,8 +12,7 @@
         "outputPath": "dist/tools/did-generator",
         "main": "tools/did-generator/src/index.ts",
         "tsConfig": "tools/did-generator/tsconfig.lib.json",
-        "assets": ["tools/did-generator/*.md"],
-        "clean": false
+        "assets": ["tools/did-generator/*.md"]
       }
     },
     "help": {
