--- a/tools/cert-generator/project.json
+++ b/tools/cert-generator/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "tools/cert-generator/src",
   "projectType": "library",
-  "tags": ["scope:cert-generator", "type:tool"],
+  "tags": ["type:tool", "runtime:node"],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
