--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,9 +19,10 @@
       "@c2pa-mcnl/shared/ui/file-upload": [
         "libs/shared/ui/file-upload/src/index.ts"
       ],
-      "@c2pa-mcnl/shared/utils": ["libs/shared/utils/src/index.ts"],
       "@c2pa-mcnl/tools/did-generator": ["tools/did-generator/src/index.ts"],
-      "@c2pa-mcnl/tools/cert-generator": ["tools/cert-generator/src/index.ts"]
+      "@c2pa-mcnl/tools/cert-generator": ["tools/cert-generator/src/index.ts"],
+      "@c2pa-mcnl/shared/utils": ["libs/shared/utils/src/index.ts"],
+      "@c2pa-mcnl/shared/node/utils": ["libs/shared/node/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
