--- a/libs/shared/node/utils/project.json
+++ b/libs/shared/node/utils/project.json
@@ -14,6 +14,9 @@
         "tsConfig": "libs/shared/node/utils/tsconfig.lib.json",
         "assets": []
       }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint"
     }
   }
 }
