--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/language-service": "~21.0.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "22.3.3",
+    "@nx/esbuild": "^22.4.5",
     "@nx/eslint": "22.3.3",
     "@nx/eslint-plugin": "22.3.3",
     "@nx/js": "22.3.3",
@@ -52,6 +53,7 @@
     "autoprefixer": "^10.4.0",
     "did-jwt": "^8.0.0",
     "did-jwt-vc": "^4.0.0",
+    "esbuild": "^0.27.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jsdom": "^27.1.0",
