feat(signing-webapp): implement signing form with file upload components and validation

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,7 +22,16 @@
       "@c2pa-mcnl/tools/did-generator": ["tools/did-generator/src/index.ts"],
       "@c2pa-mcnl/tools/cert-generator": ["tools/cert-generator/src/index.ts"],
       "@c2pa-mcnl/shared/utils": ["libs/shared/utils/src/index.ts"],
-      "@c2pa-mcnl/shared/node/utils": ["libs/shared/node/utils/src/index.ts"]
+      "@c2pa-mcnl/shared/node/utils": ["libs/shared/node/utils/src/index.ts"],
+      "@c2pa-mcnl/signing-webapp/feature-signing-form": [
+        "libs/signing-webapp/feature-signing-form/src/index.ts"
+      ],
+      "@c2pa-mcnl/signing-webapp/ui-upload-file-input": [
+        "libs/signing-webapp/ui-upload-file-input/src/index.ts"
+      ],
+      "@c2pa-mcnl/shared/util-form-validators": [
+        "libs/shared/util-form-validators/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
