--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened]
 
 permissions:
   actions: read
@@ -20,14 +19,19 @@ jobs:
           filter: tree:0
           fetch-depth: 0
 
+      - uses: pnpm/action-setup@v4
+
+      - run: npx nx start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="build"
+
       - uses: actions/setup-node@v6
         with:
           node-version: 24
           cache: 'pnpm'
 
-      - run: npm ci
+      - run: pnpm install --frozen-lockfile
+      - uses: nrwl/nx-set-shas@v4
 
-      - run: npx nx run-many -t lint test build
+      - run: npx nx affected -t lint test build
 
-      - run: npx nx-cloud fix-ci
+      - run: npx nx fix-ci
         if: always()
