--- a/package.json
+++ b/package.json
@@ -68,5 +68,6 @@
     "typescript-eslint": "^8.40.0",
     "vite": "^7.3.1",
     "vitest": "^4.0.8"
-  }
+  },
+  "packageManager": "pnpm@10.28.2"
 }
