--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     }
   },
   "dependencies": {
-    "@angular/common": "~21.0.0",
-    "@angular/compiler": "~21.0.0",
-    "@angular/core": "~21.0.0",
-    "@angular/forms": "~21.0.0",
-    "@angular/platform-browser": "~21.0.0",
-    "@angular/router": "~21.0.0",
-    "@nx/cypress": "^22.3.3",
-    "@nx/jest": "^22.4.4",
+    "@angular/common": "21.1.3",
+    "@angular/compiler": "21.1.3",
+    "@angular/core": "21.1.3",
+    "@angular/forms": "21.1.3",
+    "@angular/platform-browser": "21.1.3",
+    "@angular/router": "21.1.3",
+    "@nx/cypress": "22.4.5",
+    "@nx/jest": "22.4.5",
     "@peculiar/x509": "^1.14.3",
     "commander": "^14.0.3",
     "rxjs": "~7.8.0"
@@ -25,23 +25,23 @@
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "~2.1.3",
     "@analogjs/vitest-angular": "~2.1.2",
-    "@angular-devkit/core": "~21.0.0",
-    "@angular-devkit/schematics": "~21.0.0",
-    "@angular/build": "~21.0.0",
-    "@angular/cli": "~21.0.0",
-    "@angular/compiler-cli": "~21.0.0",
-    "@angular/language-service": "~21.0.0",
+    "@angular-devkit/core": "21.1.3",
+    "@angular-devkit/schematics": "21.1.3",
+    "@angular/build": "21.1.3",
+    "@angular/cli": "21.1.3",
+    "@angular/compiler-cli": "21.1.3",
+    "@angular/language-service": "21.1.3",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "22.3.3",
-    "@nx/esbuild": "^22.4.5",
-    "@nx/eslint": "22.3.3",
-    "@nx/eslint-plugin": "22.3.3",
-    "@nx/js": "22.3.3",
-    "@nx/vite": "22.3.3",
-    "@nx/vitest": "22.3.3",
-    "@nx/web": "22.3.3",
-    "@nx/workspace": "22.3.3",
-    "@schematics/angular": "~21.0.0",
+    "@nx/angular": "22.4.5",
+    "@nx/esbuild": "22.4.5",
+    "@nx/eslint": "22.4.5",
+    "@nx/eslint-plugin": "22.4.5",
+    "@nx/js": "22.4.5",
+    "@nx/vite": "22.4.5",
+    "@nx/vitest": "22.4.5",
+    "@nx/web": "22.4.5",
+    "@nx/workspace": "22.4.5",
+    "@schematics/angular": "21.1.3",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -58,7 +58,7 @@
     "eslint-config-prettier": "^10.0.0",
     "jsdom": "^27.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "22.3.3",
+    "nx": "22.4.5",
     "postcss": "^8.4.5",
     "prettier": "~3.6.2",
     "qrcode": "^1.5.3",
